--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"hpp": "^0.2.3",
 		"html-to-text": "^8.1.0",
 		"jsonwebtoken": "^8.5.1",
+		"lint": "^0.7.0",
 		"moment": "^2.29.2",
 		"mongoose": "^5.13.12",
 		"morgan": "^1.10.0",
